--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
 		<title>Spooner</title>
 		<script src="https://kit.fontawesome.com/5537a772c3.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" href="gta5.css">
+		<!-- <link rel="stylesheet" href="gta5.css"> -->
 		<link rel="stylesheet" href="rdr3.css">
 		<script src="script.js"></script>
 	</head>
@@ -197,6 +197,9 @@
 			<button id="object-menu-close-btn">Back</button>
 		</div>
 		<div id="object-database" class="menu">
+			<div id="database-search" class="search">
+				<input type="text" id="database-search-filter" class="search-filter" value="">
+			</div>
 			<div id="object-database-stats">
 				<div class="object-database-stat">All: <span id="object-database-total-entities"></span></div>
 				<div class="object-database-stat">Net: <span id="object-database-total-networked"></span></div>
@@ -248,7 +251,7 @@
 							<input type="number" class="set-attach adjust-input" id="attachment-z" step="0.01">
 						</div>
 						<button id="copy-attachment-position" class="copy-button">
-							<i class="fas fa-clipboard"></i>
+							<i class="fas fa-copy"></i>
 						</button>
 					</div>
 				</div>
@@ -272,7 +275,7 @@
 							<input type="number" class="set-attach rotate-input" id="attachment-yaw" step="1.0" min="-359" max="359">
 						</div>
 						<button id="copy-attachment-rotation" class="copy-button">
-							<i class="fas fa-clipboard"></i>
+							<i class="fas fa-copy"></i>
 						</button>
 					</div>
 				</div>
@@ -308,9 +311,7 @@
 				<div class="property" id="properties-model-container">
 					<div class="label">Model</div>
 					<div class="value" id="properties-model"></div>
-					<button id="copy-model-name" class="copy-button">
-						<i class="fas fa-clipboard" aria-hidden="true"></i>
-					</button>
+					<button id="copy-model-name">Copy</button>
 				</div>
 				<div class="property multiple">
 					<button id="properties-select">Select</button>
@@ -343,9 +344,10 @@
 							<div class="input-label">Z</div>
 							<input type="number" class="set-coords adjust-input" id="properties-z" step="0.01">
 						</div>
-						<button id="copy-position" class="copy-button">
-							<i class="fas fa-clipboard"></i>
-						</button>
+						<div class="position-buttons">
+							<button id="copy-position">Copy</button>
+							<button id="paste-position">Paste</button>
+						</div>
 					</div>
 				</div>
 				<div class="property multiple">
@@ -371,9 +373,10 @@
 							<div class="input-label">Yaw</div>
 							<input type="number" class="set-rotation rotate-input" id="properties-yaw" min="-359" max="359" step="1">
 						</div>
-						<button id="copy-rotation" class="copy-button">
-							<i class="fas fa-clipboard"></i>
-						</button>
+						<div class="rotation-buttons">
+							<button id="copy-rotation">Copy</button>
+							<button id="paste-rotation">Paste</button>
+						</div>
 					</div>
 				</div>
 				<div class="property">
