feat(spooner): Load Object Preview

--- a/ui/index.html
+++ b/ui/index.html
@@ -193,6 +193,7 @@
 				</button>
 			</div>
 			<div id="object-list" class="list"></div>
+			<button id="object-menu-load-btn">Load Object</button>
 			<button id="object-spawn-by-name" class="spawn-by-name">Spawn By Name</button>
 			<button id="object-menu-close-btn">Back</button>
 		</div>
